AC_INIT([icecast2_yp], [0.1.0], [icecast@xiph.org])

AC_CANONICAL_HOST
AC_PREREQ(2.54)
AC_CONFIG_SRCDIR(src/yp_cgi.c)
dnl Process this file with autoconf to produce a configure script.

AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_PROG_CC
AM_PROG_LIBTOOL

dnl Set some options based on environment

DEBUG="-g"
if test -z "$GCC"; then
    XIPH_CPPFLAGS="-D_REENTRANT"
    case $host in 
        *-*-irix*)
                XIPH_CPPFLAGS="$XIPH_CPPFLAGS -w -signed"
                PROFILE="-p -g3 -O2 -signed -D_REENTRANT"
                ;;
        *-*-solaris*)
                XIPH_CFLAGS="-xO4 -xcg92"
                XIPH_CPPFLAGS="$XIPH_CPPFLAGS -v -w -fsimple -fast"
                PROFILE="-xpg -g -Dsuncc"
                ;;
        *)
                XIPH_CFLAGS="-O"
                PROFILE="-g -p"
                ;;
    esac

    case "$host" in
        *openbsd* | *irix*)
        ;;
        *) AC_DEFINE([_XOPEN_SOURCE], 600, [Define if you have POSIX and XPG specifications])
        ;;
    esac

else
    XIPH_CPPFLAGS="-Wall -ffast-math -fsigned-char"
    PROFILE="-pg -g"
    AC_DEFINE([_GNU_SOURCE], 1, [Define to include GNU extensions to POSIX])
fi

dnl Checks for programs.

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Check for types

dnl Checks for library functions.

dnl -- configure options --

AM_PATH_MYSQL(, , AC_MSG_ERROR(Cannot find mysql client library))
AM_PATH_XML2(, , AC_MSG_ERROR(Cannot find libxml2))

#CFLAGS="$CFLAGS -I${prefix}/include"
#LIBS="-L${prefix}/lib $LIBS -lcgi"
#AC_CHECK_HEADERS(cgi.h,CFLAGS="$CFLAGS -I${prefix}/include" LIBS="-L${prefix}/lib $LIBS -lcgi",AC_MSG_ERROR(Cannot find libcgi))
OLDCFLAGS=${CFLAGS}
OLDCPPFLAGS=${CPPFLAGS}
CFLAGS="${CFLAGS} -I$prefix/include"   
CPPFLAGS="${CPPFLAGS} -I$prefix/include"   
AC_CHECK_HEADERS(cgi.h,,AC_MSG_ERROR(Cannot find libcgi))
CPPFLAGS=${OLDCPPFLAGS}
CFLAGS=${OLDCFLAGS} 


LIBS="-L/usr/local/lib $LIBS -lcgi"

dnl Make substitutions

AC_SUBST(LIBTOOL_DEPS)
AC_SUBST(LIBS)
AC_SUBST(DEBUG)
AC_SUBST(CFLAGS)
AC_SUBST(PROFILE)

AC_OUTPUT([Makefile src/Makefile sql/Makefile]) 
