
AC_INIT
AM_INIT_AUTOMAKE(oss2pulse,1.0)
AC_PROG_CC
AC_PROG_INSTALL
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

if test "$PKG_CONFIG" = "no"; then
  AC_MSG_ERROR([
This package requires pkg-config.
])
fi

AC_CHECK_LIB(fusd, fusd_run, [], [AC_MSG_ERROR([fusd is required for this application.])])
AC_CHECK_HEADER([fusd.h], [], [AC_MSG_ERROR([Could not find fusd.h])])
AC_CHECK_HEADER([sys/soundcard.h], [], [AC_MSG_ERROR([Could not find sndfile.h. Install OSS development package.])])

AC_MSG_CHECKING(for Pulse Audio (via libpulse))
if $PKG_CONFIG --atleast-version 0.9.5 libpulse >/dev/null 2>&1 ; then
  PULSE_CFLAGS="`$PKG_CONFIG --cflags libpulse`"
  PULSE_LIBADD="`$PKG_CONFIG --libs-only-l libpulse`"
  PULSE_LDFLAGS="`$PKG_CONFIG --libs-only-L libpulse`"
  AC_MSG_RESULT(yes)
  AC_DEFINE(HAVE_LIBPULSE, 1,
        [Define if you have libpulse (required if you want Pulse support)])
else
  AC_MSG_ERROR([Could not find libpulse])
fi
AC_SUBST(PULSE_CFLAGS)
AC_SUBST(PULSE_LIBADD)
AC_SUBST(PULSE_LDFLAGS)


AC_OUTPUT(Makefile src/Makefile src/oss2pulse/Makefile )
