SUBDIRS = \
	src


desktopdir = $(datadir)/applications/hildon
desktop_DATA = oggplay.desktop

servicedir = $(libdir)/dbus-1.0/services
service_DATA = oggplay.service


EXTRA_DIST =					\
        autogen.sh				\
        README					\
        AUTHORS					\
        ChangeLog				\
        COPYING					\
        debian/changelog			\
        debian/compat				\
        debian/copyright			\
        debian/control				\
        debian/rules				\
        debian/oggplay.links			\
        oggplay.desktop				\
        oggplay.service
