dnl process this file with autoconf to generate the configure script

AC_INIT(oggmerge.c)
AM_INIT_AUTOMAKE(oggmerge,0.9)

AC_PROG_CC

XIPH_PATH_OGG()
XIPH_PATH_VORBIS()

dnl Check for libraries
#AC_CHECK_LIB(png, png_check_sig)
#AC_CHECK_LIB(jpeg, jpeg_set_defaults)
#AC_CHECK_LIB(mng, mng_readdisplay)

dnl Check for headers
AC_HEADER_STDC()
#AC_CHECK_HEADERS(libmng.h)

AC_OUTPUT(Makefile testfiles/Makefile tools/Makefile)
