dnl Process this file with autoconf to produce a configure script.

dnl Version of this release
VERSION=0.1

AC_INIT(mngplay.c)
AM_INIT_AUTOMAKE(oggplay, $VERSION)

dnl AC_CANONICAL_SYSTEM
AC_LANG_C

dnl Checks for programs.
AC_PROG_CC

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for types
AC_C_BIGENDIAN

dnl check for Simple Direct Media Layer
AC_CHECK_PROG(HAS_SDL, sdl-config, yes)
if test "x$HAS_SDL" != "xyes"; then
    AC_MSG_ERROR([ SDL library not found!
    You need this for any display to happen. (rather the point)
    You can get a copy at <http://libsdl.org/>])
fi
CFLAGS="$CFLAGS `sdl-config --cflags`"
LDFLAGS="$LDFLAGS `sdl-config --libs`"

dnl check for libogg - macro in acinclude.m4
XIPH_PATH_OGG([CFLAGS="$CFLAGS $OGG_CFLAGS" LIBS="$LIBS $OGG_LIBS"])

dnl check for libmng - macro in acinclude.m4
LIBMNG_CHECK()

AC_OUTPUT(Makefile)
