dnl Process this file with autoconf to produce a configure script.

AC_INIT(oggsplit.c)
dnl Every other copy of the package version number gets its value from here
AM_INIT_AUTOMAKE(oggsplit, 0.1.2)

AC_SUBST(VERSION)

AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for Ogg libraries and headers.
XIPH_PATH_OGG()

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC

AC_OUTPUT(Makefile)
